--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+<dependency>
+    <groupId>org.easymock</groupId>
+    <artifactId>easymock</artifactId>
+    <version>4.3</version>
+    <scope>test</scope>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
